hydroflow/tests/snapshots/surface_group_by__group_by_infer_basic@graphvis_dot.snap
---
source: hydroflow/tests/surface_group_by.rs
expression: df.serde_graph().unwrap().to_dot()
---
digraph {
    subgraph "cluster n1v1" {
        fillcolor="#dddddd"
        style=filled
        label = "sg_1v1\nstratum 0"
        n1v1 [label="(n1v1) source_iter([SubordResponse {xid: \"123\",mtype: 33,},SubordResponse {xid: \"123\",mtype: 52,},SubordResponse {xid: \"123\",mtype: 72,},SubordResponse {xid: \"123\",mtype: 83,},SubordResponse {xid: \"123\",mtype: 78,},])", fontname=Monaco, shape=invhouse, style = filled, color = "#0022ff", fontcolor = "#ffffff"]
        n2v1 [label="(n2v1) map(|m: SubordResponse| (m.xid, 1))", fontname=Monaco, shape=invhouse, style = filled, color = "#0022ff", fontcolor = "#ffffff"]
        n1v1 -> n2v1
    }
    subgraph "cluster n2v1" {
        fillcolor="#dddddd"
        style=filled
        label = "sg_2v1\nstratum 1"
        n3v1 [label="(n3v1) group_by::<'static>(|| 0, |old: &mut u32, val: u32| *old += val)", fontname=Monaco, shape=invhouse, style = filled, color = "#0022ff", fontcolor = "#ffffff"]
        n4v1 [label="(n4v1) for_each(|(k, v)| println!(\"{}: {}\", k, v))", fontname=Monaco, shape=house, style = filled, color = "#ffff00"]
        n3v1 -> n4v1
    }
    n2v1 -> n5v1
    n5v1 [label="(n5v1) handoff", fontname=Monaco, shape=parallelogram, style = filled, color = "#ddddff"]
    n5v1 -> n3v1 [arrowhead=box, color=red]
}

